--- a/lb1/Dockerfile
+++ b/lb1/Dockerfile
@@ -4,6 +4,6 @@ COPY nginx.conf /etc/nginx/conf.d/default.conf
 
 COPY src/* /usr/share/nginx/html/
 
-EXPOSE 80 443
+EXPOSE 443
 
 CMD ["nginx", "-g", "daemon off;"]
