--- a/lb1/nginx.conf
+++ b/lb1/nginx.conf
@@ -1,21 +1,4 @@
 server {
-    listen 80;
-    server_name _;
-
-    root /usr/share/nginx/html;
-    index index.html;
-
-    location / {
-        try_files $uri /index.html;
-    }
-
-    location = /index.html {
-        add_header Cache-Control "no-cache, must-revalidate";
-    }
-}
-
-
-server {
     listen 443 ssl;
     server_name _;
 
@@ -27,9 +10,9 @@ server {
 
     location / {
         try_files $uri /index.html;
-    }
 
-    location = /index.html {
-        add_header Cache-Control "no-cache, must-revalidate";
+        add_header Cache-Control "no-store, no-cache, must-revalidate, proxy-revalidate, max-age=0";
+        add_header Pragma "no-cache";
+        add_header Expires "0";
     }
 }
