--- a/lb3/package.json
+++ b/lb3/package.json
@@ -29,9 +29,9 @@
         "express": "^4.18.2",
         "helmet": "^7.0.0",
         "morgan": "^1.10.0",
+        "multer": "^1.4.5-lts.1",
         "nanoid": "^4.0.0",
-        "pug": "^3.0.2",
-        "multer": "^1.4.5-lts.1"
+        "pug": "^3.0.2"
     },
     "devDependencies": {
         "@babel/core": "^7.22.9",
