--- a/lb4/package.json
+++ b/lb4/package.json
@@ -28,6 +28,7 @@
     "bootstrap-icons": "^1.13.1",
     "cors": "^2.8.5",
     "express": "^5.2.1",
+    "http-proxy-middleware": "^3.0.5",
     "morgan": "^1.10.1",
     "multer": "^2.0.2",
     "nanoid": "^3.3.11",
