--- a/lb5/docker-compose.yml
+++ b/lb5/docker-compose.yml
@@ -1,16 +1,16 @@
-version: '3.8'
-
 services:
   stock-exchange:
     build:
       context: .
       dockerfile: Dockerfile
     ports:
-      - "3001:3001"
       - "3000:3000"
     volumes:
-      - ./data:/app/data
+      - stock-data:/app/data
     environment:
       - NODE_ENV=production
-      - PORT=3001
+      - PORT=3000
     restart: unless-stopped
+
+volumes:
+    stock-data:
