--- a/lb5/server/package.json
+++ b/lb5/server/package.json
@@ -25,7 +25,8 @@
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
     "class-validator": "^0.14.0",
-    "class-transformer": "^0.5.1"
+    "class-transformer": "^0.5.1",
+    "@nestjs/serve-static": "^4.0.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.3.0",
